# mcp

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  config.example.env  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
examples/: usage_example.py
src/mcp_demo_server/: __init__.py  __main__.py  server.py
tests/: test_server.py
